--- a/DBConverter/DBConverter/DBConverter.vcxproj
+++ b/DBConverter/DBConverter/DBConverter.vcxproj
@@ -49,7 +49,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_WINDOWS;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -130,7 +130,9 @@
     <ClCompile Include="AccessWriter.cpp" />
     <ClCompile Include="DBConverter.cpp" />
     <ClCompile Include="DBConverterDlg.cpp" />
-    <ClCompile Include="sqlite3.c" />
+    <ClCompile Include="sqlite3.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Default</CompileAs>
+    </ClCompile>
     <ClCompile Include="SQLiteDatabase.cpp" />
     <ClCompile Include="SQLiteReader.cpp" />
     <ClCompile Include="SQLiteWriter.cpp" />
