--- a/DBConverter/DBConverter/DBConverter.vcxproj
+++ b/DBConverter/DBConverter/DBConverter.vcxproj
@@ -122,6 +122,7 @@
     <ClInclude Include="SQLiteReader.h" />
     <ClInclude Include="SQLiteWriter.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="StringUtilities.h" />
     <ClInclude Include="Table.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Trigger.h" />
