--- a/DBConverter/DBConverter/DBConverter.vcxproj
+++ b/DBConverter/DBConverter/DBConverter.vcxproj
@@ -114,7 +114,11 @@
     <ClInclude Include="Field.h" />
     <ClInclude Include="ForeignKey.h" />
     <ClInclude Include="Index.h" />
+    <ClInclude Include="RecordProducer.h" />
     <ClInclude Include="RecordStatement.h" />
+    <ClInclude Include="semaphore.h" />
+    <ClInclude Include="StatementConsumer.h" />
+    <ClInclude Include="StatementQueue.h" />
     <ClInclude Include="StructureStatement.h" />
     <ClInclude Include="PrimaryKey.h" />
     <ClInclude Include="Procedure.h" />
@@ -140,12 +144,15 @@
     <ClCompile Include="AccessWriter.cpp" />
     <ClCompile Include="DBConverter.cpp" />
     <ClCompile Include="DBConverterDlg.cpp" />
+    <ClCompile Include="RecordProducer.cpp" />
     <ClCompile Include="sqlite3.c">
       <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Default</CompileAs>
     </ClCompile>
     <ClCompile Include="SQLiteDatabase.cpp" />
     <ClCompile Include="SQLiteReader.cpp" />
     <ClCompile Include="SQLiteWriter.cpp" />
+    <ClCompile Include="StatementConsumer.cpp" />
+    <ClCompile Include="StatementQueue.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
